--- a/dafe-portfolio/package.json
+++ b/dafe-portfolio/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "dotenv": "^16.4.7",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
