Fixed Contact form

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-SERVIVE_ID=service_f7e04xi
-TEMPLATE_ID=template_0pqmcyc
+SERVIVE_ID="service_f7e04xi"
+TEMPLATE_ID="template_0pqmcyc"
+PUBLIC_KEY=F9HhsCDQqIHpU8BXK
